--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
         <link rel="stylesheet" href="css/style.css">
         <title>Spotify</title>
@@ -18,9 +20,62 @@
         <!-- main -->
         <main>
             <section id="home">
-                <div class="nav_aside"></div>
+                <div class="nav_aside">
+                    <div class="nav_top">
+                        <img id='logo' src="img/logo.svg" alt="logo">
+                        <ul class="nav_list nav">
+                            <li class="active">
+                                <a href="#">
+                                    <img src="img/home.svg" alt="home">
+                                    <span>Home</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img src="img/search.svg" alt="search">
+                                    <span>Cerca</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img src="img/libreria.svg" alt="libreria">
+                                    <span>La tua libreria</span>
+                                </a>
+                            </li>
+                        </ul>  
+                        <h4>playlist</h4>
+                        <div class="new_playlist">
+                            <i class="fas fa-plus-square fa-3x"></i>
+                            <span>Crea Playlist</span>
+                        </div>
+                    </div>
+                    <div class="nav_center playlist">
+                        <span>Nome Playlist</span>
+                        <span>Nome Playlist</span>
+                        <span>Nome Playlist</span>
+                        <span>Nome Playlist</span>
+                        <span>Nome Playlist</span>
+                        <span>Nome Playlist</span>
+                        <span>Nome Playlist</span>
+                        <span>Nome Playlist</span>
+                        <span>Nome Playlist</span>
+                        <span>Nome Playlist</span>
+                        <span>Nome Playlist</span>
+                        <span>Nome Playlist</span> 
+                    </div>
+                    <div class="nav_bottom">
+                        <div class="download">
+                            <img src="img/download.svg" alt="download">
+                            <span>Installa app</span>
+                        </div>
+                        <div class="profile">
+                            <img src="img/profile.svg" alt="profile">
+                            <span>Ale</span>
+                        </div>
+                    </div>
+                </div>
                 <div class="music">
-                   
+                   lorem3000
                 </div>
             </section>
         </main>
