--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <body>
         <!-- header -->
         <header>
-            <section class="upgrade"></section>
+            <section class="upgrade">
+                <a href="#">effettua l'upgrade</a>
+            </section>
         </header>
         <!-- /header -->
         
@@ -25,7 +27,7 @@
                         <img id='logo' src="img/logo.svg" alt="logo">
                         <ul class="nav_list nav">
                             <li class="active">
-                                <a href="#">
+                                <a href="#home">
                                     <img src="img/home.svg" alt="home">
                                     <span>Home</span>
                                 </a>
@@ -75,7 +77,7 @@
                     </div>
                 </div>
                 <div class="music">
-                   lorem3000
+                   
                 </div>
             </section>
         </main>
