--- a/index.html
+++ b/index.html
@@ -77,7 +77,51 @@
                     </div>
                 </div>
                 <div class="music">
-                   
+                    <div class="wrapper">
+                        <div class="nav_bar">
+                            <span><a href="#">in evidenza</a></span>
+                            <span><a href="#">podcast</a></span>
+                            <span><a href="#">classifiche</a></span>
+                            <span><a href="#">generi e mood</a></span>
+                            <span><a href="#">nuove uscite</a></span>
+                            <span><a href="#">scopri</a></span>
+                        </div>
+                        <div class="recently">
+                            <h2>Recenly played</h2>
+                            <div class="music_items">
+                                <div class="item">
+                                    <img src="img/metal_lifting.jpg" alt="metal">
+                                    <h3>Heavy Metal</h3>
+                                    <h5>Subtitle</h5>
+                                </div>
+                                <div class="item">
+                                    <img src="img/metal_lifting.jpg" alt="metal">
+                                    <h3>Heavy Metal</h3>
+                                    <h5>Subtitle</h5>
+                                </div>
+                                <div class="item">
+                                    <img src="img/metal_lifting.jpg" alt="metal">
+                                    <h3>Heavy Metal</h3>
+                                    <h5>Subtitle</h5>
+                                </div>
+                                <div class="item">
+                                    <img src="img/metal_lifting.jpg" alt="metal">
+                                    <h3>Heavy Metal</h3>
+                                    <h5>Subtitle</h5>
+                                </div>
+                                <div class="item">
+                                    <img src="img/metal_lifting.jpg" alt="metal">
+                                    <h3>Heavy Metal</h3>
+                                    <h5>Subtitle</h5>
+                                </div>
+                                <div class="item">
+                                    <img src="img/metal_lifting.jpg" alt="metal">
+                                    <h3>Heavy Metal</h3>
+                                    <h5>Subtitle</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
