--- a/index.html
+++ b/index.html
@@ -87,37 +87,51 @@
                             <span><a href="#">scopri</a></span>
                         </div>
                         <div class="recently">
-                            <h2>Recenly played</h2>
-                            <div class="music_items">
+                            <h2>Recently played</h2>
+                            <div class="recently_items">
                                 <div class="item">
                                     <img src="img/metal_lifting.jpg" alt="metal">
                                     <h3>Heavy Metal</h3>
                                     <h5>Subtitle</h5>
                                 </div>
                                 <div class="item">
-                                    <img src="img/metal_lifting.jpg" alt="metal">
-                                    <h3>Heavy Metal</h3>
+                                    <img src="img/stranger.jpeg" alt="stranger">
+                                    <h3>Stranger Things, Vol.1(a Netflix Original Series Soundtrack)</h3>
+                                    <h5>Kyle Dixon & Michael Stein</h5>
+                                </div>
+                                <div class="item">
+                                    <img src="img/aquietplace.jpeg" alt="aquietplace">
+                                    <h3>A quit place</h3>
                                     <h5>Subtitle</h5>
                                 </div>
                                 <div class="item">
-                                    <img src="img/metal_lifting.jpg" alt="metal">
-                                    <h3>Heavy Metal</h3>
+                                    <img src="img/split.jpeg" alt="split">
+                                    <h3>Split</h3>
                                     <h5>Subtitle</h5>
                                 </div>
                                 <div class="item">
-                                    <img src="img/metal_lifting.jpg" alt="metal">
-                                    <h3>Heavy Metal</h3>
+                                    <img src="img/cure.jpeg" alt="cure">
+                                    <h3>A cure for wellnes</h3>
                                     <h5>Subtitle</h5>
                                 </div>
                                 <div class="item">
-                                    <img src="img/metal_lifting.jpg" alt="metal">
-                                    <h3>Heavy Metal</h3>
+                                    <img src="img/sinister.jpeg" alt="sinister">
+                                    <h3>Sinister</h3>
                                     <h5>Subtitle</h5>
                                 </div>
+                            </div>
+                        </div>
+                        <div class="for_user">
+                            <h2>Creato per Ale</h2>
+                            <h5>Pi&ugrave; ascolti, pi&ugrave; saranno i suggerimenti</h5>
+                            <div class="for_user_items">
                                 <div class="item">
-                                    <img src="img/metal_lifting.jpg" alt="metal">
-                                    <h3>Heavy Metal</h3>
-                                    <h5>Subtitle</h5>
+                                    <img src="img/radar.jpeg" alt="radar">
+                                    <h3>Release Radar</h3>
+                                </div>
+                                <div class="item">
+                                    <img src="img/mixdaily.jpeg" alt="mixdaily">
+                                    <h3>Daily Mix 1</h3>
                                 </div>
                             </div>
                         </div>
@@ -130,7 +144,9 @@
         <!-- footer -->
         <footer>
             <section id="player">
-
+                <div class="song_name"></div>
+                <div class="timeline"></div>
+                <div class="volume"></div>
             </section>
         </footer>
         <!-- /footer -->
