--- a/index.html
+++ b/index.html
@@ -144,9 +144,43 @@
         <!-- footer -->
         <footer>
             <section id="player">
-                <div class="song_name"></div>
-                <div class="timeline"></div>
-                <div class="volume"></div>
+                <div class="song_name">
+                    <img src="img/sinister.jpeg" alt="sinister">
+                    <div class="text_song_name">
+                        <h5>Sinister</h5>
+                        <h6>Brano Nome</h6>
+                    </div>
+                    <div class="icon_song_name">
+                        <i class="far fa-heart"></i>
+                        <i class="far fa-folder"></i>
+                    </div>
+                </div>
+                <div class="timeline">
+                    <div class="comands">
+                        <i class="fas fa-random"></i>
+                        <i class="fas fa-step-backward"></i>
+                        <i class="far fa-play-circle"></i>
+                        <i class="fas fa-step-forward"></i>
+                        <i class="fas fa-redo-alt"></i>
+                    </div>
+                    <div class="time">
+                        <h6>0:25</h6>
+                        <div class="line">
+                            <div class="time_left"></div>
+                            <div class="time_right"></div>
+                        </div>
+                        <h6>4:45</h6>
+                    </div>
+                </div>
+                <div class="volume">
+                    <i class="fas fa-list"></i>
+                    <i class="fas fa-desktop"></i>
+                    <i class="fas fa-volume-up"></i>
+                    <div class="line_volume">
+                        <div class="volume_left"></div>
+                        <div class="volume_right"></div>
+                    </div>
+                </div>
             </section>
         </footer>
         <!-- /footer -->
