--- a/index.html
+++ b/index.html
@@ -24,27 +24,20 @@
             <section id="home">
                 <div class="nav_aside">
                     <div class="nav_top">
-                        <img id='logo' src="img/logo.svg" alt="logo">
-                        <ul class="nav_list nav">
-                            <li class="active">
-                                <a href="#home">
-                                    <img src="img/home.svg" alt="home">
-                                    <span>Home</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img src="img/search.svg" alt="search">
-                                    <span>Cerca</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img src="img/libreria.svg" alt="libreria">
-                                    <span>La tua libreria</span>
-                                </a>
-                            </li>
-                        </ul>  
+                        <img id='logo_small' src="img/logo-small.svg" alt="logo-small">
+                        <img id='logo' src="img/logo.svg" alt="logo">                       
+                        <a href="#home">
+                            <img src="img/home.svg" alt="home">
+                            <span>Home</span>
+                        </a>                   
+                        <a href="#">
+                            <img src="img/search.svg" alt="search">
+                            <span>Cerca</span>
+                        </a>                  
+                        <a href="#">
+                            <img src="img/libreria.svg" alt="libreria">
+                            <span>La tua libreria</span>
+                        </a>        
                         <h4>playlist</h4>
                         <div class="new_playlist">
                             <i class="fas fa-plus-square fa-3x"></i>
@@ -79,7 +72,7 @@
                 <div class="music">
                     <div class="wrapper">
                         <div class="nav_bar">
-                            <span><a href="#">in evidenza</a></span>
+                            <span><a href="#">in evidenza</a><div class="border_center"></div></span>
                             <span><a href="#">podcast</a></span>
                             <span><a href="#">classifiche</a></span>
                             <span><a href="#">generi e mood</a></span>
@@ -88,7 +81,7 @@
                         </div>
                         <div class="recently">
                             <h2>Recently played</h2>
-                            <div class="recently_items">
+                            <div class="items">
                                 <div class="item">
                                     <img src="img/metal_lifting.jpg" alt="metal">
                                     <h3>Heavy Metal</h3>
@@ -124,7 +117,7 @@
                         <div class="for_user">
                             <h2>Creato per Ale</h2>
                             <h5>Pi&ugrave; ascolti, pi&ugrave; saranno i suggerimenti</h5>
-                            <div class="for_user_items">
+                            <div class="items">
                                 <div class="item">
                                     <img src="img/radar.jpeg" alt="radar">
                                     <h3>Release Radar</h3>
@@ -132,6 +125,20 @@
                                 <div class="item">
                                     <img src="img/mixdaily.jpeg" alt="mixdaily">
                                     <h3>Daily Mix 1</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="artist">
+                            <h2>Artisti pi&ugrave; popolari</h2>
+                            <h5>Pi&ugrave; ascolti, pi&ugrave; saranno i suggerimenti</h5>
+                            <div class="items">
+                                <div class="item">
+                                    <img src="img/youg.jpeg" alt="youg">
+                                    <h3>Youg</h3>
+                                </div>
+                                <div class="item">
+                                    <img src="img/einaudi.jpeg" alt="einaudi">
+                                    <h3>Einaudi</h3>
                                 </div>
                             </div>
                         </div>
