--- a/index.html
+++ b/index.html
@@ -83,32 +83,62 @@
                             <h2>Recently played</h2>
                             <div class="items">
                                 <div class="item">
-                                    <img src="img/metal_lifting.jpg" alt="metal">
+                                    <div class="music_img">
+                                        <img src="img/metal_lifting.jpg" alt="metal">
+                                        <div class="layover">
+                                            <i class="far fa-play-circle"></i>
+                                        </div>
+                                    </div>
                                     <h3>Heavy Metal</h3>
                                     <h5>Subtitle</h5>
                                 </div>
                                 <div class="item">
-                                    <img src="img/stranger.jpeg" alt="stranger">
+                                    <div class="music_img">
+                                        <img src="img/stranger.jpeg" alt="stranger">
+                                        <div class="layover">
+                                            <i class="far fa-play-circle"></i>
+                                        </div>
+                                    </div>
                                     <h3>Stranger Things, Vol.1(a Netflix Original Series Soundtrack)</h3>
                                     <h5>Kyle Dixon & Michael Stein</h5>
                                 </div>
                                 <div class="item">
-                                    <img src="img/aquietplace.jpeg" alt="aquietplace">
+                                    <div class="music_img">
+                                        <img src="img/aquietplace.jpeg" alt="aquietplace">
+                                        <div class="layover">
+                                            <i class="far fa-play-circle"></i>
+                                        </div>
+                                    </div>
                                     <h3>A quit place</h3>
                                     <h5>Subtitle</h5>
                                 </div>
                                 <div class="item">
-                                    <img src="img/split.jpeg" alt="split">
+                                    <div class="music_img">
+                                        <img src="img/split.jpeg" alt="split">
+                                        <div class="layover">
+                                            <i class="far fa-play-circle"></i>
+                                        </div>
+                                    </div>
                                     <h3>Split</h3>
                                     <h5>Subtitle</h5>
                                 </div>
                                 <div class="item">
-                                    <img src="img/cure.jpeg" alt="cure">
+                                    <div class="music_img">
+                                        <img src="img/cure.jpeg" alt="cure">
+                                        <div class="layover">
+                                            <i class="far fa-play-circle"></i>
+                                        </div>
+                                    </div>
                                     <h3>A cure for wellnes</h3>
                                     <h5>Subtitle</h5>
                                 </div>
                                 <div class="item">
-                                    <img src="img/sinister.jpeg" alt="sinister">
+                                    <div class="music_img">
+                                        <img src="img/sinister.jpeg" alt="sinister">
+                                        <div class="layover">
+                                            <i class="far fa-play-circle"></i>
+                                        </div>
+                                    </div>
                                     <h3>Sinister</h3>
                                     <h5>Subtitle</h5>
                                 </div>
@@ -119,11 +149,21 @@
                             <h5>Pi&ugrave; ascolti, pi&ugrave; saranno i suggerimenti</h5>
                             <div class="items">
                                 <div class="item">
-                                    <img src="img/radar.jpeg" alt="radar">
+                                    <div class="music_img">
+                                        <img src="img/radar.jpeg" alt="radar">
+                                        <div class="layover">
+                                            <i class="far fa-play-circle"></i>
+                                        </div>
+                                    </div>
                                     <h3>Release Radar</h3>
                                 </div>
                                 <div class="item">
-                                    <img src="img/mixdaily.jpeg" alt="mixdaily">
+                                    <div class="music_img">
+                                        <img src="img/mixdaily.jpeg" alt="mixdaily">
+                                        <div class="layover">
+                                            <i class="far fa-play-circle"></i>
+                                        </div>
+                                    </div>
                                     <h3>Daily Mix 1</h3>
                                 </div>
                             </div>
@@ -133,11 +173,21 @@
                             <h5>Pi&ugrave; ascolti, pi&ugrave; saranno i suggerimenti</h5>
                             <div class="items">
                                 <div class="item">
-                                    <img src="img/youg.jpeg" alt="youg">
+                                    <div class="music_img">
+                                        <img src="img/youg.jpeg" alt="youg">
+                                        <div class="layover">
+                                            <i class="far fa-play-circle"></i>
+                                        </div>
+                                    </div>
                                     <h3>Youg</h3>
                                 </div>
                                 <div class="item">
-                                    <img src="img/einaudi.jpeg" alt="einaudi">
+                                    <div class="music_img">
+                                        <img src="img/einaudi.jpeg" alt="einaudi">
+                                        <div class="layover">
+                                            <i class="far fa-play-circle"></i>
+                                        </div>
+                                    </div>
                                     <h3>Einaudi</h3>
                                 </div>
                             </div>
@@ -174,6 +224,7 @@
                         <h6>0:25</h6>
                         <div class="line">
                             <div class="time_left"></div>
+                            <i class="fas fa-circle"></i>
                             <div class="time_right"></div>
                         </div>
                         <h6>4:45</h6>
@@ -185,6 +236,7 @@
                     <i class="fas fa-volume-up"></i>
                     <div class="line_volume">
                         <div class="volume_left"></div>
+                        <i class="fas fa-circle"></i>
                         <div class="volume_right"></div>
                     </div>
                 </div>
