--- a/index.html
+++ b/index.html
@@ -52,12 +52,7 @@
                         <span>Nome Playlist</span>
                         <span>Nome Playlist</span>
                         <span>Nome Playlist</span>
-                        <span>Nome Playlist</span>
-                        <span>Nome Playlist</span>
-                        <span>Nome Playlist</span>
-                        <span>Nome Playlist</span>
-                        <span>Nome Playlist</span> 
-                    </div>
+                        </div>
                     <div class="nav_bottom">
                         <div class="download">
                             <img src="img/download.svg" alt="download">
@@ -72,7 +67,10 @@
                 <div class="music">
                     <div class="wrapper">
                         <div class="nav_bar">
-                            <span><a href="#">in evidenza</a><div class="border_center"></div></span>
+                            <span>
+                                <a href="#">in evidenza</a>
+                                <div class="border_center"></div>
+                            </span>
                             <span><a href="#">podcast</a></span>
                             <span><a href="#">classifiche</a></span>
                             <span><a href="#">generi e mood</a></span>
