--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <!-- main -->
         <main>
             <section id="home">
+                <!-- nav aside -->
                 <div class="nav_aside">
                     <div class="nav_top">
                         <img id='logo_small' src="img/logo-small.svg" alt="logo-small">
@@ -64,6 +65,9 @@
                         </div>
                     </div>
                 </div>
+                <!-- nav aside -->
+
+                <!-- schermata canzoni -->
                 <div class="music">
                     <div class="wrapper">
                         <div class="nav_bar">
@@ -192,6 +196,8 @@
                         </div>
                     </div>
                 </div>
+                <!-- schermata canzoni -->
+
             </section>
         </main>
         <!-- /main -->
@@ -199,6 +205,7 @@
         <!-- footer -->
         <footer>
             <section id="player">
+                <!-- canzone in riproduzione -->
                 <div class="song_name">
                     <img src="img/sinister.jpeg" alt="sinister">
                     <div class="text_song_name">
@@ -210,6 +217,9 @@
                         <i class="far fa-folder"></i>
                     </div>
                 </div>
+                <!-- canzone in riproduzione -->
+
+                <!-- tempo e controlli -->
                 <div class="timeline">
                     <div class="comands">
                         <i class="fas fa-random"></i>
@@ -228,6 +238,9 @@
                         <h6>4:45</h6>
                     </div>
                 </div>
+                <!-- tempo e controlli -->
+
+                <!-- volume -->
                 <div class="volume">
                     <i class="fas fa-list"></i>
                     <i class="fas fa-desktop"></i>
@@ -238,6 +251,8 @@
                         <div class="volume_right"></div>
                     </div>
                 </div>
+                <!-- volume -->
+
             </section>
         </footer>
         <!-- /footer -->
